# Yoda

./: .env.example  .gitignore  CLAUDE.md  README.md  teams-meeting-assistant-spec.md  teams-meeting-assistant-spec2.md
YODA-BB/foundation/: pyproject.toml
YODA-BB/foundation/src/yoda_foundation/: dependencies.py
YODA-BB/foundation/src/yoda_foundation/config/: __init__.py  settings.py
YODA-BB/foundation/src/yoda_foundation/data_access/: __init__.py  registry.py
YODA-BB/foundation/src/yoda_foundation/dspy/: __init__.py  integration.py  schemas.py
YODA-BB/foundation/src/yoda_foundation/events/: __init__.py
YODA-BB/foundation/src/yoda_foundation/exceptions/: __init__.py  auth.py  base.py  data_access.py  dspy.py  events.py  guardrails.py  memory.py  observability.py  resilience.py
YODA-BB/foundation/src/yoda_foundation/guardrails/: __init__.py  base.py  content_safety.py  engine.py  fact_check.py  jailbreak.py  middleware.py  moderation.py  policy.py  rail.py  schemas.py  topic.py
YODA-BB/foundation/src/yoda_foundation/memory/: __init__.py  base_tier.py  consolidation.py  context.py  decay.py  manager.py  schemas.py
YODA-BB/foundation/src/yoda_foundation/middleware/: __init__.py  correlation_id.py  error_handler.py  logging_middleware.py  rate_limiter.py  security_headers.py
YODA-BB/foundation/src/yoda_foundation/models/: __init__.py  action_item.py  base.py  chat.py  document.py  insight.py  meeting.py  notification.py  project.py  subscription.py  summary.py  transcript.py
YODA-BB/foundation/src/yoda_foundation/observability/: __init__.py  config.py  exporters.py  instrumentor.py  logging.py  (+5 more)
YODA-BB/foundation/tests/: test_dspy_integration.py  test_imports.py
YODA-BB/services/chat-service/: Dockerfile  pyproject.toml
YODA-BB/services/chat-service/tests/: __init__.py
YODA-BB/services/meeting-service/: Dockerfile  pyproject.toml
YODA-BB/services/meeting-service/tests/: __init__.py  test_calendar_watcher.py  test_delivery.py  test_nudge_scheduler.py  test_owner_resolver.py
YODA-BB/services/yoda-api/: Dockerfile  pyproject.toml
compiled/: .env.example  .gitignore  alembic.ini  pyproject.toml
compiled/alembic/: env.py  script.py.mako
compiled/alembic/versions/: 001_add_pgvector_and_document_chunks.py  002_wireframe_gap_closure.py
compiled/deployment/: Dockerfile  docker-compose.yml
compiled/src/cxo_ai_companion/: dependencies.py  main.py
compiled/src/cxo_ai_companion/config/: __init__.py  settings.py
compiled/src/cxo_ai_companion/data_access/: __init__.py
compiled/src/cxo_ai_companion/dspy/: __init__.py  schemas.py
compiled/src/cxo_ai_companion/exceptions/: __init__.py  base.py  dspy.py
compiled/src/cxo_ai_companion/models/: __init__.py  action_item.py  base.py  chat.py  document.py  insight.py  meeting.py  notification.py  project.py  subscription.py  summary.py  transcript.py
compiled/src/cxo_ai_companion/observability/: __init__.py  logging.py  metrics.py  tracing.py
compiled/src/cxo_ai_companion/rag/: __init__.py
compiled/src/cxo_ai_companion/schemas/: __init__.py  acs.py  action_item.py  chat.py  dashboard.py  document.py  insight.py  meeting.py  notification.py  pre_meeting_brief.py  project.py  search.py  summary.py  transcript.py  webhook.py
compiled/src/cxo_ai_companion/security/: __init__.py  auth_dependency.py  context.py  jwt_validator.py
compiled/src/cxo_ai_companion/services/: __init__.py  acs_call_service.py  ai_processor.py  cached_graph_client.py  calendar_watcher.py  chat_service.py  conflict_detection_service.py  dashboard_service.py  delivery.py  document_service.py  graph_client.py  insight_service.py  notification_service.py  nudge_scheduler.py  owner_resolver.py  pre_meeting_service.py  transcription.py  weekly_digest_service.py
compiled/src/cxo_ai_companion/templates/: conflict_alert_card.json  nudge_card.json  pre_meeting_brief_card.json  summary_card.json  weekly_digest_card.json
compiled/src/cxo_ai_companion/utilities/: __init__.py
compiled/tests/: conftest.py  test_acs_pipeline.py  test_caching.py  test_service_wiring.py
teams-meeting-assistant/: .env.example  .gitignore  RUN.md  pyproject.toml  requirements-dev.txt  requirements.txt
teams-meeting-assistant/alembic/: alembic.ini  env.py
teams-meeting-assistant/app/: config.py  dependencies.py  main.py
teams-meeting-assistant/app/models/: __init__.py  action_item.py  meeting.py  subscription.py  summary.py  transcript.py
teams-meeting-assistant/app/routes/: acs_callbacks.py  action_items.py  bot_events.py  health.py  meetings.py  webhooks.py
teams-meeting-assistant/app/schemas/: acs.py  action_item.py  bot_events.py  meeting.py  summary.py  transcript.py  webhook.py
teams-meeting-assistant/app/services/: acs_call_service.py  ai_processor.py  bot_commander.py  calendar_watcher.py  delivery.py  graph_client.py  nudge_scheduler.py  owner_resolver.py  post_processing.py  transcription.py
teams-meeting-assistant/app/templates/: nudge_card.json  summary_card.json  weekly_digest_card.json
teams-meeting-assistant/app/utils/: auth.py  hmac_auth.py  logging_config.py  retry.py
teams-meeting-assistant/browser-bot/: .env.example  .gitignore  Dockerfile  package.json  tsconfig.json
teams-meeting-assistant/browser-bot/src/: index.ts
teams-meeting-assistant/browser-bot/src/services/: bot-manager.ts  python-backend.ts  transcription.ts
teams-meeting-assistant/deployment/: .env.template  create-azure-vm.sh  deploy-vm.ps1  docker-compose.yml  nginx.conf
teams-meeting-assistant/docs/: TEST-BOT-JOIN.md
teams-meeting-assistant/media-bot/: Dockerfile  MediaBot.sln  get-cert.ps1  install-cert.ps1  verify-cert.ps1
teams-meeting-assistant/media-bot/src/MediaBot/: MediaBot.csproj  Program.cs  appsettings.json
teams-meeting-assistant/scripts/: grant_graph_permissions.sh  seed_db.py  setup_acs_federation.ps1
teams-meeting-assistant/tests/: conftest.py  test_acs_call_service.py  test_ai_processor.py  test_bot_commander.py  test_bot_events.py  test_calendar_watcher.py  test_delivery.py  test_nudge_scheduler.py  test_owner_resolver.py
(+533 files in other folders)
