[project]
name = "teams-meeting-assistant"
version = "1.0.0"
description = "Teams Meeting Assistant Bot — Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
